--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: java
-#install: true
+install: true
 
 jdk:
 - openjdk8
 
 script:
-- ./gradlew build --scan -s
+- ./gradlew build
+
+before_cache:
+- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+- rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+  - $HOME/.gradle/caches/
+  - $HOME/.gradle/wrapper/
