--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,9 @@ dependencies {
 }
 
 jar {
-    configurations {
+    /*configurations {
         jar.archiveName = 'serversystem.jar'
-    }
+    }*/
     manifest {
         attributes "Main-Class": "com.logicmaster63.serversystem.ServerSystem"
     }
