--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,12 @@ cache:
   directories:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
+before_deploy:
+  # Set up git user name and tag this commit
+  - git config --local user.name "theLogicMaster"
+  - git config --local user.email "justinmarentette11@gmail.com"
+  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+  - git tag $TRAVIS_TAG
 deploy:
   name: $project_version
   provider: releases
