--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
 before_deploy:
   - git config --local user.name "theLogicMaster"
   - git config --local user.email "justinmarentette11@gmail.com"
-  - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+  - export TRAVIS_TAG=$project_version
   - git tag $TRAVIS_TAG
 deploy:
   provider: releases
