--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ cache:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
 before_deploy:
+  - mvn help:evaluate -N -Dexpression=project.version|grep -v '\['
+  - export project_version=$(mvn help:evaluate -N -Dexpression=project.version|grep -v '\[')
   - git config --local user.name "theLogicMaster"
   - git config --local user.email "justinmarentette11@gmail.com"
   - export TRAVIS_TAG={$project_version}
